---
source: compiler-core/src/parse/tests.rs
assertion_line: 678
expression: "\n@deprecated(\"1\")\n@external(erlang, \"module\", \"fun\")\n"
---
----- SOURCE CODE

@deprecated("1")
@external(erlang, "module", "fun")


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.rakun:2:1
  │  
2 │ ╭ @deprecated("1")
3 │ │ @external(erlang, "module", "fun")
  │ ╰──────────────────────────────────^ I was expecting a function definition after this
